--- a/api/package.json
+++ b/api/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon ./dist/index.js",
+    "build": "tsc",
+    "dev": "npm run build && npm run start", 
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
