--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon ./dist/index.js",
-    "build": "tsc",
+    "build": "rimraf dist && npx tsc",
     "dev": "npm run build && npm run start", 
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,7 +16,8 @@
     "axios": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "rimraf": "^5.0.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
