--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon ./dist/index.js",
-    "build": "rimraf dist && npx tsc",
+    "prebuild": "rimraf dist",
+    "build": "npm run prebuild && npx tsc",
     "dev": "npm run build && npm run start", 
     "test": "echo \"Error: no test specified\" && exit 1"
   },
