--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,7 @@
     "start": "nodemon ./dist/index.js",
     "prebuild": "rimraf dist",
     "build": "npm run prebuild && npx tsc",
-    "dev": "npm run build && npm run start", 
+    "dev": "npm run build && npm run start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -21,6 +21,7 @@
     "rimraf": "^5.0.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^20.4.1",
     "concurrently": "^8.2.0",
