--- a/api/package.json
+++ b/api/package.json
@@ -23,8 +23,10 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/morgan": "^1.9.4",
     "@types/node": "^20.4.1",
     "concurrently": "^8.2.0",
+    "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
     "typescript": "^5.1.6"
   }
