--- a/package.json
+++ b/package.json
@@ -10,16 +10,25 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "next": "13.4.9",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "rimraf": "^5.0.1"
   },
   "devDependencies": {
-    "@types/node": "^20.4.1",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/morgan": "^1.9.4",
+    "@types/node": "^20.4.2",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "concurrently": "^8.2.0",
     "eslint": "^8.44.0",
     "eslint-config-next": "^13.4.9",
+    "morgan": "^1.10.0",
     "typescript": "^5.1.6"
   }
 }
