--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch",
+    "test:ci": "jest --ci"
   },
   "dependencies": {
     "axios": "^1.4.0",
@@ -19,15 +21,21 @@
     "rimraf": "^5.0.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/morgan": "^1.9.4",
     "@types/node": "^20.4.2",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "@types/testing-library__jest-dom": "^5.14.8",
     "concurrently": "^8.2.0",
     "eslint": "^8.44.0",
     "eslint-config-next": "^13.4.9",
+    "jest": "^29.6.1",
+    "jest-environment-jsdom": "^29.6.1",
     "morgan": "^1.10.0",
     "typescript": "^5.1.6"
   }
