--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --watch",
+    "test": "jest --config ./jest.config.js",
+    "test:watch": "npm run test -- --watch",
     "test:ci": "jest --ci"
   },
   "dependencies": {
@@ -36,6 +37,7 @@
     "eslint-config-next": "^13.4.9",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
+    "jest-fetch-mock": "^3.0.3",
     "morgan": "^1.10.0",
     "typescript": "^5.1.6"
   }
